lib/src/compiler/tests/testdata/errors/64.out
error[E001]: syntax error
 --> line:1:28
  |
1 | rule test { condition: true
  |                            ^ expected closing brace `}` or operator
  |